other/restrict-service-port-range/.chainsaw-test/svc-bad.yaml
apiVersion: v1
kind: Service
metadata:
  name: badsvc01
spec:
  selector:
    app: nginx
  ports:
    - name: foo-port
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: badsvc02
spec:
  selector:
    app: nginx
  ports:
    - name: foo-port
      port: 32111
      targetPort: 32111
      nodePort: 32333
    - name: bar-port
      port: 443
      targetPort: 443
      nodePort: 31234
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: badsvc03
spec:
  selector:
    app: nginx
  ports:
    - name: foo-port
      port: 80
      targetPort: 80
      nodePort: 30001
    - name: bar-port
      port: 32999
      targetPort: 32999
      nodePort: 30009
  type: NodePort
